--- a/index.html
+++ b/index.html
@@ -391,13 +391,16 @@
         <div class="row g-5">
           <div class="col-lg-6 h-100 wow fadeInUp" data-wow-delay="0.2s">
             <div class="text-center mx-auto pb-5" style="max-width: 800px;">
-              <h4 class="text-uppercase text-primary">Let’s Connect</h4>
+              <h4 class="text-uppercase tm-text-primary">Let’s Connect</h4>
               <h1 class="display-3 text-capitalize mb-3">Send Your Message</h1>
-              <p class="mb-0">The contact form is currently inactive. Get a functional and working contact form with
-                Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a
-                  class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+              <p class="mb-0">We value your interest in our services and are here to help with any questions or
+                inquiries you may have. Please don't hesitate to reach out to us using the "Send Message" form
+                below. Whether you need more information about our offerings, have specific queries, or require
+                assistance, our team is ready to provide the support you need. Simply fill out the form with
+                your name, email, and message, and we will get back to you as soon as possible.
+                Your satisfaction is our priority, and we look forward to assisting you!</a>.</p>
             </div>
-            <form>
+            <form id="submissionForm">
               <div class="row g-4">
                 <div class="col-lg-12 col-xl-6 mb-2">
                   <div class="form-floating">
@@ -431,7 +434,10 @@
                   </div>
                 </div>
                 <div class="col-12 mb-2">
-                  <button class="btn btn-primary w-100 py-3" class="tm-text-primary">Send Message</button>
+                  <!-- <button class="btn btn-primary w-100 py-3" class="tm-text-primary" onclick="submitData()">Send
+                    Message</button> -->
+                    <a class="btn tm-btn-primary w-100 py-3" class="tm-text-primary" onclick="submitData()">Send
+                      Message</a>
                 </div>
               </div>
             </form>
@@ -443,7 +449,9 @@
                   <i class="far fa-chart-bar fa-2x text-secondary tm-icon"></i>
                   <div class="ml-2">
                     <h4 class="tm-text-primary">Address</h4>
-                    <p class="mb-0 text-black">123 North tower New York, USA</p>
+                    <p class="mb-0 text-black">Imperial Services FZE,P1-LOB Office # E-25F-24,
+                      <br /> Hamriyah Free Zone,Phase-1, Sharjah, U.A.E
+                    </p>
                   </div>
                 </div>
               </div>
@@ -452,7 +460,7 @@
                   <i class="fas fa-envelope fa-2x text-secondary tm-icon"></i>
                   <div class="ml-2">
                     <h4 class="tm-text-primary">Mail Us</h4>
-                    <p class="mb-0 text-black" >info@example.com</p>
+                    <p class="mb-0 text-black">info@Imperialservicesfz.com</p>
                   </div>
                 </div>
               </div>
@@ -461,14 +469,15 @@
                   <i class="fa fa-phone fa-2x text-secondary tm-icon"></i>
                   <div class="ml-2">
                     <h4 class="tm-text-primary">Telephone</h4>
-                    <p class="mb-0 text-black">(+012) 3456 7890 123</p>
+                    <p class="mb-0 text-black">(+971) 55 6139086</p>
                   </div>
                 </div>
               </div>
               <div class="col-12">
                 <div class="h-100 overflow-hidden">
+                  <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1562.6648976588144!2d55.49006877138915!3d25.454126300083146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDI3JzEzLjUiTiA1NcKwMjknMjUuOCJF!5e0!3m2!1sen!2sin!4v1724574543098!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
                   <iframe class="w-100 rounded" style="height: 400px;"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1694259649153!5m2!1sen!2sbd"
+                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1562.6648976588144!2d55.49006877138915!3d25.454126300083146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjXCsDI3JzEzLjUiTiA1NcKwMjknMjUuOCJF!5e0!3m2!1sen!2sin!4v1724574543098!5m2!1sen!2sin"
                     loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
               </div>
@@ -481,7 +490,8 @@
       <p class="mb-0">
         Copyright &copy; 2020 Imperial Services FZE
 
-        . <a rel="nofollow" href="https://www.linkedin.com/in/asutosha-sahu" title="HTML templates">Designed by Ashutosh Sahu</a></p>
+        . <a rel="nofollow" href="https://www.linkedin.com/in/asutosha-sahu" title="HTML templates">Designed by Ashutosh
+          Sahu</a></p>
     </footer>
 
   </section>
@@ -492,191 +502,7 @@
   <script src="js/easing.min.js"></script>
   <script src="js/jquery.singlePageNav.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script>
-
-    function getOffSet() {
-      var _offset = 450;
-      var windowHeight = window.innerHeight;
-
-      if (windowHeight > 500) {
-        _offset = 400;
-      }
-      if (windowHeight > 680) {
-        _offset = 300
-      }
-      if (windowHeight > 830) {
-        _offset = 210;
-      }
-
-      return _offset;
-    }
-
-    function setParallaxPosition($doc, multiplier, $object) {
-      var offset = getOffSet();
-      var from_top = $doc.scrollTop(),
-        bg_css = 'center ' + (multiplier * from_top - offset) + 'px';
-      $object.css({ "background-position": bg_css });
-    }
-
-    // Parallax function
-    // Adapted based on https://codepen.io/roborich/pen/wpAsm        
-    var background_image_parallax = function ($object, multiplier, forceSet) {
-      multiplier = typeof multiplier !== 'undefined' ? multiplier : 0.5;
-      multiplier = 1 - multiplier;
-      var $doc = $(document);
-      // $object.css({"background-attatchment" : "fixed"});
-
-      if (forceSet) {
-        setParallaxPosition($doc, multiplier, $object);
-      } else {
-        $(window).scroll(function () {
-          setParallaxPosition($doc, multiplier, $object);
-        });
-      }
-    };
-
-    var background_image_parallax_2 = function ($object, multiplier) {
-      multiplier = typeof multiplier !== 'undefined' ? multiplier : 0.5;
-      multiplier = 1 - multiplier;
-      var $doc = $(document);
-      $object.css({ "background-attachment": "fixed" });
-
-      $(window).scroll(function () {
-        if ($(window).width() > 768) {
-          var firstTop = $object.offset().top,
-            pos = $(window).scrollTop(),
-            yPos = Math.round((multiplier * (firstTop - pos)) - 186);
-
-          var bg_css = 'center ' + yPos + 'px';
-
-          $object.css({ "background-position": bg_css });
-        } else {
-          $object.css({ "background-position": "center" });
-        }
-      });
-    };
-
-    $(function () {
-      // Hero Section - Background Parallax
-      background_image_parallax($(".tm-parallax"), 0.30, false);
-      background_image_parallax_2($("#contact"), 0.80);
-      background_image_parallax_2($("#testimonials"), 0.80);
-
-      // Handle window resize
-      window.addEventListener('resize', function () {
-        background_image_parallax($(".tm-parallax"), 0.30, true);
-      }, true);
-
-      // Detect window scroll and update navbar
-      $(window).scroll(function (e) {
-        if ($(document).scrollTop() > 120) {
-          $('.tm-navbar').addClass("scroll");
-        } else {
-          $('.tm-navbar').removeClass("scroll");
-        }
-      });
-
-      // Close mobile menu after click 
-      $('#tmNav a').on('click', function () {
-        $('.navbar-collapse').removeClass('show');
-      })
-
-      // Scroll to corresponding section with animation
-      $('#tmNav').singlePageNav({
-        'easing': 'easeInOutExpo',
-        'speed': 600
-      });
-
-      // Add smooth scrolling to all links
-      // https://www.w3schools.com/howto/howto_css_smooth_scroll.asp
-      $("a").on('click', function (event) {
-        if (this.hash !== "") {
-          event.preventDefault();
-          var hash = this.hash;
-
-          $('html, body').animate({
-            scrollTop: $(hash).offset().top
-          }, 600, 'easeInOutExpo', function () {
-            window.location.hash = hash;
-          });
-        } // End if
-      });
-
-      // Pop up
-      $('.tm-gallery').magnificPopup({
-        delegate: 'a',
-        type: 'image',
-        gallery: { enabled: true }
-      });
-
-      $('.tm-testimonials-carousel').slick({
-        dots: true,
-        prevArrow: false,
-        nextArrow: false,
-        infinite: false,
-        slidesToShow: 3,
-        slidesToScroll: 1,
-        responsive: [
-          {
-            breakpoint: 992,
-            settings: {
-              slidesToShow: 2
-            }
-          },
-          {
-            breakpoint: 768,
-            settings: {
-              slidesToShow: 2
-            }
-          },
-          {
-            breakpoint: 480,
-            settings: {
-              slidesToShow: 1
-            }
-          }
-        ]
-      });
-
-      // Gallery
-      $('.tm-gallery').slick({
-        dots: true,
-        infinite: false,
-        slidesToShow: 5,
-        slidesToScroll: 2,
-        responsive: [
-          {
-            breakpoint: 1199,
-            settings: {
-              slidesToShow: 4,
-              slidesToScroll: 2
-            }
-          },
-          {
-            breakpoint: 991,
-            settings: {
-              slidesToShow: 3,
-              slidesToScroll: 2
-            }
-          },
-          {
-            breakpoint: 767,
-            settings: {
-              slidesToShow: 2,
-              slidesToScroll: 1
-            }
-          },
-          {
-            breakpoint: 480,
-            settings: {
-              slidesToShow: 1,
-              slidesToScroll: 1
-            }
-          }
-        ]
-      });
-    });
-  </script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
