--- a/index.html
+++ b/index.html
@@ -84,26 +84,24 @@
 
       <div class="row tm-content-box"><!-- second row -->
         <div class="col-lg-1">
-          <i class="far fa-3x fa-chart-bar text-center tm-icon"></i>
+          <i class="fa fa-3x fa-address-card text-center tm-icon"></i>
         </div>
         <div class="col-lg-5">
           <div class="tm-intro-text-container">
-            <h2 class="tm-text-primary mb-4">Market Analysis</h2>
+            <h2 class="tm-text-primary mb-4">Customs Clearing</h2>
             <p class="mb-4 tm-intro-text">
-              Praesent sed pharetra lorem, blandit convallis mi. Aenean ornare elit ac metus lacinia, sed iaculis nibh
-              semper. Pellentesque est urna.</p>
+              We provide efficient customs clearing services to ensure your goods pass smoothly through customs, minimizing delays and ensuring compliance with all regulations.</p>
           </div>
         </div>
 
         <div class="col-lg-1">
-          <i class="far fa-3x fa-comment-alt text-center tm-icon"></i>
+          <i class="fa fa-3x fa-plane-departure text-center tm-icon"></i>
         </div>
         <div class="col-lg-5">
           <div class="tm-intro-text-container">
-            <h2 class="tm-text-primary mb-4">Fast Support</h2>
+            <h2 class="tm-text-primary mb-4">AIR Shipping</h2>
             <p class="mb-4 tm-intro-text">
-              Credit goes to <a rel="nofollow" href="https://www.pexels.com">Pexels</a> website for all images used in
-              this template. Cras condimentum mi et sapien dignissim luctus.</p>
+              Our air shipping service offers fast and reliable transport for your cargo, with a network that spans across the globe, ensuring timely delivery.</p>
           </div>
         </div>
 
@@ -111,17 +109,42 @@
 
       <div class="row tm-content-box"><!-- third row -->
         <div class="col-lg-1">
-          <i class="fas fa-3x fa-fingerprint text-center tm-icon"></i>
+          <i class="fa fa-3x fa-truck text-center tm-icon"></i>
         </div>
         <div class="col-lg-5">
           <div class="tm-intro-text-container">
-            <h2 class="tm-text-primary mb-4">Top Security</h2>
+            <h2 class="tm-text-primary mb-4">Land Transport</h2>
             <p class="mb-4 tm-intro-text">
-              You have <strong>no</strong> authority to post this template as a ZIP file on your template collection
-              websites. You can <strong>use</strong> this template for your commercial websites.</p>
+              With our comprehensive land transport solutions, we offer door-to-door delivery using a fleet of well-maintained vehicles to meet your logistics needs.</p>
+          </div>
+        </div>
 
+        <div class="col-lg-1">
+          <i class="fa fa-3x fa-ship text-center tm-icon"></i>
+        </div>
+        <div class="col-lg-5">
+          <div class="tm-intro-text-container">
+            <h2 class="tm-text-primary mb-4">Sea Shipping</h2>
+            <p class="mb-4 tm-intro-text">
+              Our sea shipping service is ideal for large or bulky cargo, offering cost-effective and secure transportation across international waters.
+            </p>
+          </div>
+        </div>
+
+      </div><!-- third row -->
+
+      <div class="row tm-content-box"><!-- third row -->
+        <div class="col-lg-1">
+          <!-- <i class="fas fa-3x fa-fingerprint text-center tm-icon"></i> -->
+           <img class="serviceLogo ml-3" src="img/freight.png" alt="">
+        </div>
+        <div class="col-lg-5">
+          <div class="tm-intro-text-container">
+            <h2 class="tm-text-primary mb-4">Freight Forwarding</h2>
+            <p class="mb-4 tm-intro-text">
+              We provide end-to-end freight forwarding services, managing all aspects of the logistics process to ensure your goods are transported efficiently and on time.
             <div class="tm-continue">
-              <a href="#testimonials" class="tm-intro-text tm-btn-primary">Learn More</a>
+              <a class="tm-intro-text tm-btn-primary" data-toggle="modal" data-target=".moreDetails">More Details</a>
             </div>
           </div>
         </div>
@@ -131,21 +154,14 @@
         </div>
         <div class="col-lg-5">
           <div class="tm-intro-text-container">
-            <h2 class="tm-text-primary mb-4">Social Work</h2>
+            <h2 class="tm-text-primary mb-4">Duty Exemptions</h2>
             <p class="mb-4 tm-intro-text">
-              You can change <a href="https://fontawesome.com/icons?d=gallery">Font Awesome icons</a> by either
-              <b><em>fas or far</em></b> in the HTML codes. For Examples:<br>
-              <em>&lt;i class=&quot;fas fa-users&quot;&gt;&lt;i class=&quot;far fa-chart-bar&quot;&gt;</em>
+              Our service assists in identifying and applying for applicable duty exemptions, helping you save on import and export costs by taking advantage of tax reliefs and preferential trade agreements.
             </p>
-
-            <div class="tm-continue">
-              <a href="#testimonials" class="tm-intro-text tm-btn-primary">Details</a>
-            </div>
           </div>
         </div>
 
-      </div><!-- third row -->
-
+      </div>
     </div>
 
   </section>
@@ -495,6 +511,76 @@
     </footer>
 
   </section>
+  <div class="modal fade moreDetails" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">All Services</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>PRO SERVICES & CUSTOMS CLEARING</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ALL KIND OF ENTRY BOE PROCESSING & INTERNAL TRANSFER SERVICES</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ALL KIND OF EXIT BOE PROCESSING (LOCAL)</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ALL KIND OF EXIT BOE PROCESSING (GCC)</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ALL KIND OF EXPORT BOE PROCESSING (INTERNATIONAL)</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ALL KIND OF EXPORT BOE PROCESSING (GCC/BY ROAD FOR SAUDI SHIPMENT)</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ALL KIND OF TEMPORARY EXIT BOE PROCESSING (LOCAL/SERVICES & RETURN GOODS)</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ARRANGING DEPOSIT REFUND COLLECTIONS</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>IMPORT CODE RENEWAL SERVICES</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>TRADE LICENSE RENEWAL SERVICES</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>EMPTY VEHICLE GATE PASS SERVICES (FOR LOADING ACTIVITIES)</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>TOLL PASS ARRANGMENTS</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>ALL KIND OF VEHICLE TRANSPORTATION ARRANGEMENTS</div>
+          </div>
+          <div class=" d-flex row m-0">
+            <i class="fa fa-1x fa-check text-center tm-icon"></i>
+            <div>SHARJAH CHAMBER CERTIFICATION SERVICES</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/jquery-1.9.1.min.js"></script>
   <script src="slick/slick.min.js"></script>
