--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div><!-- third row -->
 
       <div class="row tm-content-box"><!-- third row -->
-        <div class="col-lg-1">
+        <div class="col-lg-1 text-center">
           <!-- <i class="fas fa-3x fa-fingerprint text-center tm-icon"></i> -->
            <img class="serviceLogo ml-3" src="img/freight.png" alt="">
         </div>
@@ -143,9 +143,7 @@
             <h2 class="tm-text-primary mb-4">Freight Forwarding</h2>
             <p class="mb-4 tm-intro-text">
               We provide end-to-end freight forwarding services, managing all aspects of the logistics process to ensure your goods are transported efficiently and on time.
-            <div class="tm-continue">
-              <a class="tm-intro-text tm-btn-primary" data-toggle="modal" data-target=".moreDetails">More Details</a>
-            </div>
+
           </div>
         </div>
 
@@ -160,7 +158,9 @@
             </p>
           </div>
         </div>
-
+        <div class="tm-continue  ml-3">
+          <a class="tm-intro-text tm-btn-primary" data-toggle="modal" data-target=".moreDetails">More Details</a>
+        </div>
       </div>
     </div>
 
