--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
           <div class="tm-intro-text-container">
             <h2 class="tm-text-primary mb-4 tm-section-title">Services</h2>
             <p class="mb-4 tm-intro-text">
-              This is Infinite Loop, free Bootstrap 4.0 HTML template with a parallax effect. This layout is what you
-              can modify and use for your websites. Please spread a word to your friends about our website. Thank you
-              for supporting us. If you have any question, you can contact us or chat with us on our <a
-                href="https://fb.com/tooplate">Tooplate Facebook page</a>.</p>
+              We offer a full range of logistics solutions, including customs clearing to navigate regulatory hurdles, and air, land, and sea shipping services for efficient global transport. Our freight forwarding expertise ensures comprehensive management of your goods throughout their journey, delivering reliability and cost-effectiveness.</p>
           </div>
         </div>
 
@@ -172,8 +169,7 @@
         <div class="text-center col-12">
           <h2 class="tm-text-primary tm-section-title mb-4">Gallery</h2>
           <p class="mx-auto tm-section-desc">
-            Praesent sed pharetra lorem, blandit convallis mi. Aenean ornare elit ac metus lacinia, sed iaculis nibh
-            semper. Pellentesque est urna, lobortis eu arcu a, aliquet tristique urna.
+            This is a testament to our achievements, showcasing our proudest moments and successful projects. Explore our journey through these visual highlights, reflecting our dedication and excellence.
           </p>
         </div>
       </div>
