--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </p>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12">
           <div class="mx-auto tm-gallery-container">
             <div class="grid tm-gallery">
@@ -244,7 +244,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <!-- <div class="tm-bg-overlay"></div> -->
   </section>
